@@ -7,6 +7,8 @@ Version 1.7.7
        items from the status list control. (Stefan)
 - BUG: Issue #236: link-style buttons in commit
        dialog register on non-captured mouseup. (Stefan)
+- BUG: Issue #237: crash with invalid
+       config file. (Stefan)
 
 Version 1.7.6
 - BUG: Issue #209: repo browser doesn't
